# A2A-Manipulation-crossComponent-Vulnerabilites-Framework

./: .gitignore  README.md  artifact_validator.py  build_m12.py  claim_validator.py  create_docs_registry.py  docker-compose.yml  generate_paper.py  pyproject.toml  reproduce.py  requirements.txt  run_all_validation.py  run_m8_c_real.py  run_m9_publication.py  test_crewai_tools.py  validation_verdict.py
benchmark_apps/app_a_semantic_bypass/: Dockerfile  app.py  config.yaml  requirements.txt
benchmark_apps/app_b_rag_tool_poisoning/: Dockerfile  app.py  config.yaml  requirements.txt
benchmark_apps/app_c_context_truncation/: Dockerfile  app.py  config.yaml  requirements.txt
cogbias/analysis/: __init__.py  behavioral_metrics.py  bias_analysis.py  interpolation.py  latent_axes.py  latent_geometry.py  plot_m6_2.py  sensy_geometry.py
cogbias/core/: interfaces.py  pipeline.py  schemas.py  shared_model_manager.py
cogbias/datasets/: __init__.py  sensy_loader.py
cogbias/instrumentation/: activation_recorder.py
cogbias/intervention/: activation_hook.py  causal_metrics.py  latent_injection.py
cogbias/lce/: benchmark_m7_3.py  cli.py  migrate_authority.py
cogbias/logging/: dataset_dumper.py
cogbias/model_adapter/: transformers_adapter.py
cogbias/storage/: representation_store.py
cogbias/utils/: checkpoint.py
crewai_poc/: analyze_results.py  experiment_configs.py  experiment_runner.py  instrumentation.py  main.py  requirements.txt  run_campaign.py  server.py  test_litellm.py  test_loop.py  test_patch.py  tools.py
crewai_poc/output/: experiment_log.txt
crewai_poc/www/: index.html
docs/: FAQ.md  M8_C_cross_model_protocol.md  M8_E_blind_universal_challenge_protocol.md  architecture.md  experiment_matrix.md  limitations.md  reproduction_guide.md  scientific_claims.md
experiments/: generate_detailed_thesis_report.py  registry.json  run_baseline.py  run_iaf.py  run_mas_campaign.py  scratch_audit.py  scratch_bias.py  scratch_campaigns.py  scratch_classify.py  scratch_extract_turns.py  scratch_extraction.json  scratch_extractor.py  scratch_inspect_events.py  scratch_inventory.py
experiments/results/: .gitkeep  baseline_dolphinPhi_1782298310.json  eape_1782300143.json  iaf_1782300143.json
framework/fuzzer/: __init__.py  baseline_attacker.py  interaction_aware_fuzzer.py  payload_templates.py
reproducibility/: REPRODUCIBILITY_CHECKLIST.md
tests/: smoke_test_mas.py  test_ard_detector.py  test_attack_graph.py  test_blind_replication.py  test_controller.py  test_eape_mas.py  test_lce_chaos.py  test_m7_4_atlas.py  test_m8_b_production.py  test_m8_d_cir.py  test_m8_e_blind_challenge.py
(+238 files in other folders)
